[tool.poetry]
name = "vdr"
version = "0.1.0"
description = "The official implementation of vocabulary disentangled retriever (VDR)"
authors = ["Jiawei Zhou <jzhoubu@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.2.1"
torchvision = "^0.17.1"
hydra-core = "1.3.2"
datasets = "2.13.1"
wget = "^3.2"
spacy = "^3.7.4"
spicy = "^0.16.0"
wordcloud = "^1.9.3"
pynvml = "^11.5.0"
chardet = "^5.2.0"
transformers = "4.39.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
