[tool.poetry]
name = "vsearch"
version = "0.1.2"
description = "Disentangling Data on LM Vocabulary Space for Efficient Search and Retrieval-augmented Generation (RAG)"
authors = ["Jiawei Zhou <jzhoubu@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
torchvision = "*"
hydra-core = "1.3.2"
datasets = "^2.18.0"
wget = "^3.2"
spacy = "^3.7.4"
spicy = "^0.16.0"
wordcloud = "^1.9.3"
pynvml = "^11.5.0"
chardet = "^5.2.0"
huggingface-hub = "^0.22.2"
pytrec-eval-terrier = "0.5.1"
transformers = "^4.40.2"
jsonlines = "^4.0.0"
accelerate = "^0.31.0"
sentencepiece = "^0.2.0"
protobuf = "^4.23.0"
tensorboard = "^2.17.0"
vllm = "^0.5.0.post1"
pyarrow = "^17.0.0"
kaleido = "0.2.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
gradio = "^4.26.0"
faiss-gpu = "^1.7.2"
beir = "^2.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
